--- a/css/styleGame.css
+++ b/css/styleGame.css
@@ -8,15 +8,15 @@ body {
     width: 100vw;
 }
 .telaJogo {
-    width: 95%;
-    height: 95%;
+    width: 100%;
+    height: 100%;
 }
 
 #modalPopUpPergunta {
     display: flex;
     flex-direction: column;
-    width: 95%;
-    padding: 20px;
+    width: 100%;
+    padding: 20px 0;
     position: absolute;
     height: 10vh;
     text-align: center; 
