--- a/css/styleGame.css
+++ b/css/styleGame.css
@@ -57,3 +57,64 @@ body {
 .respostas:hover .setas_pergunta{
     visibility: visible;
 }
+
+#modalAcertou {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    text-align: center; 
+    justify-content: flex-end;
+    align-self: flex-end;
+    color: black;
+    background-color: #66ff009f;
+    border: 2px solid black;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 40px;
+    visibility: hidden;
+}
+#modalErrou {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    text-align: center; 
+    justify-content: flex-end;
+    align-self: flex-end;
+    color: white;
+    background-color: #ff0000;
+    border: 2px solid white;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 40px;
+    visibility: hidden;
+}
+
+.closeModalButton {
+    width: 50px;
+    align-self: center;
+    position: absolute;
+    bottom: -30px;
+    cursor: pointer;
+}
+
+.closeModalButton:hover {
+    transform: scale(1.2);
+}
+
+#gameOver {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-image: url("../img/gameOverBG.jpg");
+    background-size: contain;
+    color: white;
+    visibility: hidden;
+}
+
+#gameOver h1 {
+    font-size: 4em;
+}
